@@ -220,3 +220,43 @@ _description:
      3. After a few seconds, your recording will be played back to you.
  VERIFICATION:
      Did you hear your recording?
+
+plugin: manual
+name: audio/balance_internal_speaker
+depends: audio/playback_auto
+requires:
+ device.category == 'AUDIO'
+ package.name == 'alsa-base'
+ package.name == 'gir1.2-gst-plugins-base-0.10' or package.name == 'gir1.2-gst-plugins-base-1.0'
+ package.name == 'pulseaudio-utils'
+command: audio_settings store --file=$CHECKBOX_DATA/pulseaudio_settings; audio_settings set --device=pci --volume=50; gst_pipeline_test -t 10 'audiotestsrc wave=sine freq=512 ! audioconvert ! audioresample ! autoaudiosink'; EXIT_CODE=$?; audio_settings restore --file=$CHECKBOX_DATA/pulseaudio_settings; exit $EXIT_CODE
+_description:
+ PURPOSE:
+     Check that balance control works correctly on internal speakers
+ STEPS:
+     1. Check that moving the balance slider from left to right works smoothly
+     2. Click the Test button to play an audio tone for 10 seconds.
+     3. Move the balance slider from left to right and back.
+     4. Check that actual speaker audio balance follows your setting.
+ VERIFICATION:
+     Does the slider move smoothly, as well as being followed by the setting by the actual audio output? 
+
+plugin: manual
+name: audio/balance_headphones
+depends: audio/playback_headphones
+requires:
+ device.category == 'AUDIO'
+ package.name == 'alsa-base'
+ package.name == 'gir1.2-gst-plugins-base-0.10' or package.name == 'gir1.2-gst-plugins-base-1.0'
+ package.name == 'pulseaudio-utils'
+command: audio_settings store --file=$CHECKBOX_DATA/pulseaudio_settings; audio_settings set --device=pci --volume=50; gst_pipeline_test -t 10 'audiotestsrc wave=sine freq=512 ! audioconvert ! audioresample ! autoaudiosink'; EXIT_CODE=$?; audio_settings restore --file=$CHECKBOX_DATA/pulseaudio_settings; exit $EXIT_CODE
+_description:
+ PURPOSE:
+     Check that balance control works correctly on external headphone
+ STEPS:
+     1. Check that moving the balance slider from left to right works smoothly
+     2. Click the Test button to play an audio tone for 10 seconds.
+     3. Move the balance slider from left to right and back.
+     4. Check that actual headphone audio balance follows your setting.
+ VERIFICATION:
+     Does the slider move smoothly, as well as being followed by the setting by the actual audio output? 
